# altruvist

./: .dockerignore  .env.companion.example  .env.example  .eslintrc.cjs  .eslintrc.config.mjs  .eslintrc.json  .eslintrc.yaml  .gitignore  .prettierignore  .snyk  Anchor.toml  Dockerfile  README.md  companion.config.json  components.json  docker-compose-companion.yaml  docker-compose.yaml  docker-compose.zitadel.yaml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.test.ts  vite.config.ts  zitadel2.config  zitdael-config-script.py
.github/: labeler.yml
.github/workflows/: build-release.yml  code-deployment.yml  code-integration.yml  code-quality-checks.yml  format-lint.yml  quality-security.yml  release-publish.yml  tag-release.yml
app/: entry.server.tsx  root.tsx  routes.ts
app/components/: CustomNotification.tsx  InboxNotifications.tsx  NotificationWrapper.tsx
app/constants/: dropdownOptions.ts  search.ts
app/data/: darkmode.ts
app/hooks/: useSolanaService.ts  useTaskFiltering.ts  useViewport.ts
app/lib/: solana-config.ts  toast.ts
prisma/: schema.prisma
programs/altruvist/: Cargo.toml
programs/altruvist/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/altruvist/src/instructions/: faucet.rs  mod.rs  task.rs  task_reward.rs
public/: altruvist-token-metadata.json
skillanthropy/: Dockerfile.companion  package.json
tests/: test-utils.tsx  tsconfig.json
traefik_dynamic_conf/: services.yaml
uppy-companion-server/: Dockerfile  package-lock.json  package.json  server.js
(+251 files in other folders)
